StockMarket/src/objects/Stock__c.object
<CustomObject>
    <description>股票信息</description>
    <fields>
        <fullName>Stock_Code__c</fullName>
        <description>股票编码</description>
        <label>Stock Code</label>
        <length>16</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Stock_Exchange__c</fullName>
        <description>交易所代码</description>
        <label>Stock Exchange</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>sh</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>sz</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stock_Full_Name__c</fullName>
        <formula>TEXT(Stock_Exchange__c) &amp;   Stock_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stock Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stock_Market_Index__c</fullName>
        <defaultValue>false</defaultValue>
        <description>是否股指，默认为否</description>
        <label>Stock Market Index</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isGrab__c</fullName>
        <defaultValue>true</defaultValue>
        <description>是否抓取</description>
        <label>isGrab</label>
        <type>Checkbox</type>
    </fields>
    <label>Stock</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Stock_Code__c</columns>
        <columns>Stock_Exchange__c</columns>
        <columns>Stock_Market_Index__c</columns>
        <columns>isGrab__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <nameField>
        <label>股票名称</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Stock_Code_is_number</fullName>
        <active>true</active>
        <description>股票代码必须是由6位数字构成</description>
        <errorConditionFormula>!(ISNUMBER(Stock_Code__c) &amp;&amp; LEN(Stock_Code__c)  = 6)</errorConditionFormula>
        <errorDisplayField>Stock_Code__c</errorDisplayField>
        <errorMessage>股票编码必须是6位数字</errorMessage>
    </validationRules>
</CustomObject>